# autoradarr

./: .drone.yml  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mongo-init.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
autoradarr/: autoradarr.py  print 1.py  radarr_err.html  radarr_err.json
tests/: test_autoradarr.py
